--- a/index.html
+++ b/index.html
@@ -6,7 +6,14 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <header></header>
+        <header>
+            <div class="header-image">
+
+            </div>
+            <div class="navbar">
+
+            </div>
+        </header>
         <div class="container">
             <aside class="">
 
