Struttura Header + nav bar
Da modificare ancora i css

--- a/index.html
+++ b/index.html
@@ -4,14 +4,32 @@
         <meta charset="utf-8">
         <title>Htmlcss Struttura WP</title>
         <link rel="stylesheet" href="style.css">
+        <script src="https://kit.fontawesome.com/2a6dddd505.js" crossorigin="anonymous"></script>
     </head>
     <body>
         <header>
-            <div class="header-image">
-
+            <div class="bordobianco">
+                <div class="header-image">
+                    <div class="logo">
+                        <i class="fas fa-mountain"></i>
+                    </div>
+                    <div class="site-title">
+                        <h1>NATURAL</h1>
+                        <h2>ANOTHER BEAUTIFUL ORGANIC THEME</h2>
+                    </div>
+                    <h2>PROVA DESCRIZIONE</h2>
+                </div>
             </div>
             <div class="navbar">
-
+                <ul>
+                    <li>HOME</li>
+                    <li>ABOUT</li>
+                    <li>PAGE TEMPLATES</li>
+                    <li>A PARENT PAGE</li>
+                    <li>FEATURES</li>
+                    <li>BLOG</li>
+                    <li>CONTACT</li>
+                </ul>
             </div>
         </header>
         <div class="container">
