--- a/index.html
+++ b/index.html
@@ -21,26 +21,46 @@
                 </div>
             </div>
             <div class="navbar">
-                <ul>
-                    <li>HOME</li>
-                    <li>ABOUT</li>
-                    <li>PAGE TEMPLATES</li>
-                    <li>A PARENT PAGE</li>
-                    <li>FEATURES</li>
-                    <li>BLOG</li>
-                    <li>CONTACT</li>
+                <ul class="menu">
+                    <li class="nav">HOME</li>
+                    <li class="nav">ABOUT</li>
+                    <li class="nav">PAGE TEMPLATES</li>
+                    <li class="nav">A PARENT PAGE</li>
+                    <li class="nav">FEATURES</li>
+                    <li class="nav">BLOG</li>
+                    <li class="nav">CONTACT</li>
                 </ul>
             </div>
         </header>
         <div class="container">
             <aside class="">
-
+                <i class="fas fa-rss-square"></i>
+                <h3>Organic Themes</h3>
+                <ul class="rss">
+                    <li>
+                        <a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit,</a>
+                    </li>
+                    <li>
+                        <a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit,</a>
+                    </li>
+                    <li>
+                        <a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit,</a>
+                    </li>
+                    <li>
+                        <a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit,</a>
+                    </li>
+                    <li>
+                        <a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit,</a>
+                    </li>
+                </ul>
             </aside>
             <div class="content">
-
+                <h3>THREE COLUMN</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             </div>
             <aside class="">
-
+                <h3>THREE COLUMN</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             </aside>
         </div>
         <footer></footer>
