--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
                     <div class="logo">
                         <i class="fas fa-mountain"></i>
                     </div>
-                    <div class="site-title">
+                    <div id="site-title">
                         <h1>NATURAL</h1>
-                        <h2>ANOTHER BEAUTIFUL ORGANIC THEME</h2>
                     </div>
-                    <h2>PROVA DESCRIZIONE</h2>
+                    <div id="description">
+                        <h2>MY BEAUTIFUL THEME</h2>
+                    </div>
                 </div>
             </div>
             <div class="navbar">
@@ -33,41 +34,43 @@
             </div>
         </header>
         <div class="container">
-            <aside class="">
-                <i class="fas fa-rss-square"></i>
-                <h3>Organic Themes</h3>
-                <ul class="rss">
-                    <li>
-                        <a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit,</a>
-                    </li>
-                    <li>
-                        <a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit,</a>
-                    </li>
-                    <li>
-                        <a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit,</a>
-                    </li>
-                    <li>
-                        <a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit,</a>
-                    </li>
-                    <li>
-                        <a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit,</a>
-                    </li>
-                </ul>
+            <aside>
+                <div class="article">
+                    <img id="rss" src="img/rss.png" alt="">
+                    <h3>Organic Themes</h3>
+                    <ul class="rss">
+                        <li>
+                            <a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit,</a>
+                        </li>
+                        <li>
+                            <a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit,</a>
+                        </li>
+                        <li>
+                            <a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit,</a>
+                        </li>
+                        <li>
+                            <a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit,</a>
+                        </li>
+                        <li>
+                            <a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit,</a>
+                        </li>
+                    </ul>
+                </div>
             </aside>
             <div class="content">
                 <h3>THREE COLUMN</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             </div>
-            <aside class="">
-                <article class="">
+            <aside>
+                <article>
                     <h3>THREE COLUMN</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                 </article>
-                <article class="">
+                <article>
                     <h3>THREE COLUMN</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                 </article>
-                <article class="">
+                <article>
                     <h3>THREE COLUMN</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                 </article>
@@ -76,7 +79,11 @@
         <footer>
             <h4>Pagina realizzata da Rubio</h4>
             <hr>
-
+            <div class="loghi-social">
+                <img class="social" src="img/logo-github.png" alt="github">
+                <img class="social" src="img/logo-facebook.png" alt="facebook">
+                <img class="social" src="img/logo-instagram.png" alt="instagram">
+            </div>
         </footer>
     </body>
 </html>
